--- a/style.css
+++ b/style.css
@@ -2,6 +2,11 @@ bory{
     font-family: 'Open Sans', Arial, Helvetica, sans-serif;
     margin: 0;
     padding: 0;
+    color: #555;
+}
+
+h1, h2{
+    color: #111;
 }
 
 .top-bar {
@@ -12,4 +17,36 @@ bory{
     text-align: center;
     padding: 8px;
     border-bottom: 5px solid #fd8a24;
+}
+
+.container {
+    max-width: 888px; /* Para fixar o tamanho do texto na página*/
+    margin: auto;
+    padding: 30px;
+}
+
+
+.headline{
+    font-size: 56px;
+    line-height: 64px;
+}
+
+.subtitle{
+    font-weight: normal;
+    font-size: 20px;
+}
+
+.author{
+    font-weight: bold;
+    font-size: 0.8em;
+}
+
+.social-icons{
+    margin-top: 10px;
+}
+
+.social-icon{
+    width: 20px;
+    padding: 10px 10px 10px 0;
+    
 }
